Release v5.1.24 - All UI fixed